2003-06-28 Alexandre Pigolkine <pigolkine@gmx.de>
	* Color.cs			
	* SystemColors.cs	
		supply KnowColor enum value to save Enum.Parse at runtime

2003-06-26 Alexandre Pigolkine <pigolkine@gmx.de>
	* Graphics.cs		coordinate transformations
	* Image.cs			small fix

2003-06-22 Alexandre Pigolkine <pigolkine@gmx.de>
	* Factories.cs
	* FontFamily.cs		more implementation

2003-06-20 Alexandre Pigolkine <pigolkine@gmx.de>
	* Font.cs
	* FontFamily.cs		more implementation

2003-06-18 Alexandre Pigolkine <pigolkine@gmx.de>
	* Graphics.cs		few more calls to implementation

2003-06-15 Alexandre Pigolkine <pigolkine@gmx.de>
    * Bitmap.cs 		BITMAP declaration removed
	* Graphics.cs		few more calls to implementation
	* Image.cs			InternalImageInfo structure, image read/write functions
			
			
2003-05-26 Alexandre Pigolkine <pigolkine@gmx.de>
	* Factories.cs	analyse environment variable and machine.config to select implementation
	* Image.cs		PixelFormat property added

2003-04-30  Nick Drochak <ndrochak@gol.com>

	* Factories.cs: Change weird characters that broke build on windows.

2003-04-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ColorConverter.cs:
	(ConvertFrom): return a system or named color if there's one that fits
	teh values parsed with Color.FromArgb.

2003-04-26  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs
	* Brush.cs
	* Font.cs
	* Graphics.cs
	* Image.cs
	* Pen.cs
	* SolidBrush.cs
	* SystemBrushes.cs
	* Factories.cs
			delegate function calls to implementation

2003-04-26  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs
	* ChangeLog
	* Image.cs
	* SystemBrushes.cs		switch to Linux style line terminators

2003-03-29 Alan Tam <Tam@SiuLung.com>
	* ToolboxBitmapAttribute
		stubbed more constructors and fixed base class

2003-03-01 Alexandre Pigolkine <pigolkine@gmx.de>
	* SystemBrushes.cs
			added stubs to compile SWF


2003-02-21  Alexandre Pigolkine <pigolkine@gmx.de>
	* Font.cs
	* Graphics.cs
	* Image.cs
	* SystemBrushes.cs