@@ -1,3 +1,6 @@
+2003-06-29 Alexandre Pigolkine
+	* Graphics.cs image drawing
+
 2003-06-27  Alexandre Pigolkine <pigolkine@gmx.de>
 	* FontFamily.cs	added
 	* Graphics.cs	DrawLine functions
