@@ -1,3 +1,6 @@
+2003-06-29 Alexandre Pigolkine
+	* Graphics.cs	image drawing
+
 2003-06-28 Alexandre Pigolkine <pigolkine@gmx.de>
 	* Color.cs			
 	* SystemColors.cs	
